# scalarquantizer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  scalar_quantizer.rs
